--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,28 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: content-box;
-}
-
 html {
-    background: url(../images/home-background.jpg) no-repeat center center fixed;
-    background-size: cover;
+    background-image: url(../images/home-background.jpg);
 }
-
-body {
-    height: 100vh;
-}
-
 
 /*Header*/
-header {
-    background: black;
-    width: 100%;
-    height: 10%;
-    font-size: 1.5em;
-    color: white;
-}
-
 .logo{
     padding-left: 10%;
     float: left;
@@ -31,84 +11,8 @@ header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
 }
 
-.navigation {
-    width: 40%;
-    height: 100%;
-    float: right;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    margin-right: 5%;
-}
-
-.navigation a { 
-    height: 100%;
-    width: 100%;
-    text-decoration: none;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.current {
-    border-bottom: 2px solid white;
-}
-
-.navigation a:hover {
-    color: black;
-    background-color: white;
-    transition: 100ms;
-}
-
-#dropdown {
-    display: none;
-    width: 10%;
-    height: 100%;
-    float: right;
-    text-align: center;
-}
-
-#dropdown:hover{
-    color: black;
-    background-color: white;
-    transition: 100ms;
-    cursor: pointer;
-    
-}
-
-.dropdown-navigation {
-    position: absolute;
-    display: none;
-    justify-content: space-around;
-    flex-direction: column;
-    top: 10%;
-    width: 10%;
-    height: 25%;
-    font-size: .75em;
-    list-style: none;
-    background-color: black;
-}
-
-.dropdown-navigation a {
-    height: 100%;
-    width: 100%;
-    text-decoration: none;
-    color: white;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.dropdown-navigation a:hover {
-    color: black;
-    background-color: white;
-}
 /*Main*/
 
 main {
@@ -196,25 +100,6 @@ main {
     transition: 100ms;
 }
 
-@media only screen and (max-width: 1000px) {
-    
-    .navigation {
-        display: none;
-    }
-
-    #dropdown {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .current {
-        border: none;
-    }
-
-}
-
 @media only screen and (max-width: 850px) {
     
     .greeting {
@@ -241,10 +126,6 @@ main {
     .title span{
         font-size: 1.15em;
     }  
-
-    .dropdown-navigation {
-        font-size: .5em;
-    }
 }
 
 @media only screen and (max-width: 375px) {
