--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -2,5 +2,107 @@ html {
     background: white no-repeat center center fixed;
 }
 
+/*Main*/
+main {
+    height: 90%;
+    width: 100%;
+    display: block;
+}
 
-/*Header*/
+.about {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    text-align: center;
+    height: 10%;
+    width: 100%;
+    margin-top: 3rem;
+}
+
+.section {
+    max-width: 60%;
+    padding: 5% 0;
+}
+
+.section h2 {
+    margin-bottom: 1em;
+}
+
+.info {
+    height: 50%;
+    width: 100%;
+    line-height: 2em;
+    text-align: center;
+}
+
+.what-i-can-do, .who-am-i {
+    border-bottom: solid 1px grey;
+}
+
+.what-i-can-do {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.skills {
+    margin-top: 5%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3em;
+}
+
+.skills i {
+    margin: 0 2%;
+}
+
+#html {
+    color: rgb(255, 102, 0);
+}
+
+#css {
+    color: rgb(5, 142, 255);
+}
+
+#script {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 217, 0);
+}
+
+#js-letters {
+    position: absolute;
+    z-index: -1;
+    width: .75em;
+    height: .75em;
+    background-color: black;
+}
+
+#python {
+    color: rgba(75, 139, 190);
+}
+
+#java {
+   color: rgb(248, 152, 32)
+}
+
+@media only screen and (max-width: 1050px) {
+    .section{
+        max-width: 90%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .section{
+        max-width: 70%;
+    }
+}
