--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -57,18 +57,25 @@ header {
     border-bottom: 2px solid white;
 }
 
-.navigation a:hover, #dropdown:hover, .dropdown-navigation a:hover {
+.navigation a:hover, .dropdown-navigation a:hover {
     color: black;
     background-color: white;
     transition: 100ms;
     cursor: pointer;
 }
 
-#dropdown {
+#dropdown, #x-mark {
     display: none;
     width: 10%;
     height: 100%;
     float: right;
+    color: white;
+}
+
+#x-mark {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .dropdown-navigation {
@@ -79,6 +86,7 @@ header {
     top: 10%;
     width: 10%;
     height: 25%;
+    font-weight: 400;
     font-size: .75em;
     list-style: none;
     background-color: black;
@@ -95,6 +103,47 @@ header {
     align-items: center;
 }
 
+.contact-me.header, .contacts, .contacts a li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-me.header{
+    float: left;
+    padding-left: 3%;
+    width: clamp(20%,25%,30%);
+    height: 100%;
+    text-align: center;
+}
+
+.contacts, .contacts a, .contacts a li{
+    width: 100%;
+    height: 100%;
+}
+
+.contacts {
+    list-style: none;
+    font-size: .90em;
+}
+
+.contacts a {
+    color: white;
+    text-decoration: none;
+}
+
+.icon {
+    color: white;
+    padding: .5em;
+}
+
+a li .icon:hover {
+    color: black;
+    background-color: white;
+    border-radius: 100%;
+    transition: 100ms;
+}
+
 @media only screen and (max-width: 1000px) {
     
     .navigation {
@@ -105,7 +154,6 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
     }
 
     .current {
