--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -162,6 +162,12 @@ a li .icon:hover {
 
 }
 
+@media only screen and (min-width: 1000px) {
+    #x-mark {
+        display: none !important;
+    }
+}
+
 @media only screen and (max-width: 540px) {
     .dropdown-navigation {
         font-size: .5em;
