--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -1,11 +1,68 @@
-html {
+* {
     text-align: center;
 }
 
 h1 {
     margin-top: 1em;
+    height: 10%;
+    width: 100%;
 }
 
 p {
-    margin: 5em;
+    margin: 3em;
 }
+
+main {
+    height: 90vh;
+    width: 100%;
+}
+
+.projects {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.project {
+    height: 50%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom: solid 1px grey;
+}
+
+.project-link {
+    width: 100%;
+    text-align: left;
+}
+
+.last {
+    border-bottom: none;
+}
+
+.project-name {
+    height: 20%;
+    width: 100%;
+    margin: 1em;
+}
+
+.project-img-container {
+    height: 50%;
+    width: 100%;
+}
+
+.project-img {
+    width: 100%;
+    height: 100%;
+}
+
+.description {
+    height: 30%;
+    width: 100%;
+}
+
