--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -52,17 +52,24 @@ main {
 }
 
 .project-img-container {
-    height: 50%;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 75%;
+}
+
+#crypto-webscraper .project-img-container {
+    height: 100%;
+    width: 70%;
 }
 
 .project-img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 50%;
 }
 
 .description {
     height: 30%;
     width: 100%;
 }
-
